WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
32990
[Qt] fix fast/dom/Window/window-onFocus.html
https://bugs.webkit.org/show_bug.cgi?id=32990
Summary
[Qt] fix fast/dom/Window/window-onFocus.html
Robert Hogan
Reported
2009-12-28 12:28:06 PST
Add support for layouttestcontroller.windowIsKey and fix issue where window.onblur was getting dispatched twice from QtWebKit.
Attachments
Patch
(7.78 KB, patch)
2009-12-28 12:44 PST
,
Robert Hogan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Robert Hogan
Comment 1
2009-12-28 12:44:09 PST
Created
attachment 45569
[details]
Patch
WebKit Review Bot
Comment 2
2009-12-28 12:47:36 PST
Attachment 45569
[details]
did not pass style-queue: Failed to run "WebKitTools/Scripts/check-webkit-style" exit_code: 1 WebKitTools/DumpRenderTree/qt/LayoutTestControllerQt.cpp:297: Should have a space between // and comment [whitespace/comments] [4] Total errors found: 1
Eric Seidel (no email)
Comment 3
2009-12-29 00:07:41 PST
Comment on
attachment 45569
[details]
Patch Looks sane to me.
WebKit Commit Bot
Comment 4
2009-12-29 00:18:46 PST
Comment on
attachment 45569
[details]
Patch Clearing flags on attachment: 45569 Committed
r52611
: <
http://trac.webkit.org/changeset/52611
>
WebKit Commit Bot
Comment 5
2009-12-29 00:18:50 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug