2009-12-29  Robert Hogan  <robert@roberthogan.net>

Reviewed by Eric Seidel.

        [Qt] fix fast/dom/Window/window-onFocus.html

        Add support for layouttestcontroller.windowIsKey to Qt DRT and fix issue where
        window.onblur was getting dispatched twice from QtWebKit.

        https://bugs.webkit.org/show_bug.cgi?id=32990

        * Api/qwebpage.cpp:
        (QWebPagePrivate::focusOutEvent):
2009-12-29  Robert Hogan  <robert@roberthogan.net>

        Reviewed by Eric Seidel.

        [Qt] fix fast/dom/Window/window-onFocus.html

        Add support for layouttestcontroller.windowIsKey to Qt DRT and fix issue where
        window.onblur was getting dispatched twice from QtWebKit.

        https://bugs.webkit.org/show_bug.cgi?id=32990

        * platform/qt/Skipped:
2009-12-29  Robert Hogan  <robert@roberthogan.net>

        Reviewed by Eric Seidel.

        [Qt] fix fast/dom/Window/window-onFocus.html

        Add support for layouttestcontroller.windowIsKey to Qt DRT and fix issue where
        window.onblur was getting dispatched twice from QtWebKit.

        https://bugs.webkit.org/show_bug.cgi?id=32990

        * DumpRenderTree/qt/DumpRenderTreeQt.cpp:
        (WebCore::DumpRenderTree::DumpRenderTree):
        (WebCore::DumpRenderTree::switchFocus):
        * DumpRenderTree/qt/DumpRenderTreeQt.h:
        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
        (LayoutTestController::setWindowIsKey):
        (LayoutTestController::setMainFrameIsFirstResponder):
        * DumpRenderTree/qt/LayoutTestControllerQt.h:


Canonical link: https://commits.webkit.org/44024@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52611 268f45cc-cd09-0410-ab3c-d52691b4dbfc