WebKitTools/DumpRenderTree/qt/DumpRenderTreeQt.cpp
@@ -318,7 +318,7 @@ DumpRenderTree::DumpRenderTree()
     m_page = new WebPage(m_mainView, this);
     m_mainView->setPage(m_page);
 
-    // create out controllers. This has to be done before connectFrame,
+    // create our controllers. This has to be done before connectFrame,
     // as it exports there to the JavaScript DOM window.
     m_controller = new LayoutTestController(this);
     connect(m_controller, SIGNAL(done()), this, SLOT(dump()));
@@ -754,6 +754,12 @@ int DumpRenderTree::windowCount() const
 {
 // include the main view in the count
     return windows.count() + 1;
+}
+
+void DumpRenderTree::switchFocus(bool focused)
+{
+    QFocusEvent event((focused) ? QEvent::FocusIn : QEvent::FocusOut, Qt::ActiveWindowFocusReason);
+    QApplication::sendEvent(m_mainView, &event);
 }
 
 #if defined(Q_WS_X11)
